# chips-reco

./: .gitignore  CMakeLists.txt  GNUMakefile  GNUmakefile  Makefile  README  README.md  chips-reco-config.cmake  default.cfg  evDisplay.cc  reco-setup.sh  reco-tidy.sh  setup.sh  setupWCSimAnalysis.sh  wc_eventdisplay.C  wc_eventdisplay_3D.C  wc_eventdisplay_MC.C  wc_eventntuple.C  wc_eventreco.C  wc_houghdisplay_C.d  wc_integraltabulator.C  wc_trackfitter.C  wc_trackfitter_sweep.C  wc_trackminimizer.C  wc_truthntuple.C  wcsim.geometry.test.root
config/: default.cfg  emissionProfilesMuon.root  pmtSimPDFs.root  scatteringTable.root  spectra.root  spectraVsDistance.root  timeParams.root
config/example/: digitizer_pdf_maker.C  example_sim_output.root  pidPlots.C  wc_trackfitter_cosmic.C  wc_trackfitter_el.C  wc_trackfitter_el_mu.C  wc_trackfitter_el_plots.C  wc_trackfitter_mu.C  wc_trackfitter_piZero.C  wc_train_read_PID.C
doc/: whatStuffDoes
example/: wc_trackfitter_el.C  wc_trackfitter_el_mu.C  wc_trackfitter_el_plots.C  wc_trackfitter_mu.C  wc_trackfitter_piZero.C  wc_train_read_PID.C
example/GenerateAngularEfficiency/: R6091_LC_v1.txt
example/GenerateDigitizerPDFs/: README  RunDigitizerPDFMaker.sh
example/GenerateEmissionProfiles/: WCSimEmissionProfileGenerator.hh  WCSimEmissionProfileSelector.hh  generate_macfile.py  make_profile_files.sh
example/GenerateScatteringTable/: README.txt  checkScatteringTable.C
example/macros/: wc_integralLookupTester.C
include/: WCSimAnalysisConfig.hh  WCSimAnalysisRootLinkDef.hh  WCSimChargeLikelihood.hh  WCSimChargePredictor.hh  WCSimCosmicFitter.hh  WCSimCosmicSeed.hh  WCSimDataCleaner.hh  WCSimDetectorParameters.hh  WCSimDigitizerLikelihood.hh  WCSimDigitizerPDFMaker.hh  WCSimDisplay.hh  WCSimDisplayAB.hh  WCSimDisplayViewer.hh  WCSimEmissionProfileManager.hh  WCSimEmissionProfiles.hh  WCSimEveDisplay.hh  WCSimFastMath.hh  WCSimFitterConfig.hh  WCSimFitterInterface.hh  WCSimFitterParameters.hh  WCSimFitterPlots.hh  WCSimFitterTrackParMap.hh  WCSimFitterTree.hh  WCSimGeometry.hh  WCSimHitComparison.hh  WCSimHoughTransform.hh  WCSimHoughTransformArray.hh  WCSimImageMaker.hh  WCSimIntegralLookup.hh  WCSimIntegralLookup3D.hh  WCSimIntegralLookupMaker.hh  WCSimIntegralLookupMaker3D.hh  WCSimIntegralLookupReader.hh  WCSimInterface.hh  WCSimLikelihoodDigit.hh  WCSimLikelihoodDigitArray.hh  WCSimLikelihoodFitter.hh  WCSimLikelihoodPhotonTrack.hh  WCSimLikelihoodTrack.hh  WCSimLikelihoodTrackBase.hh  (+43 more)
legacyCode/: WCSimAnalysisConfig.cc  WCSimDisplay.cc  WCSimDisplay.hh  WCSimDisplayAB.cc  WCSimDisplayAB.hh  WCSimDisplayFactory.cc  WCSimDisplayFactory.hh  WCSimDisplayViewer.cc  WCSimDisplayViewer.hh  WCSimEveDisplay.cc  WCSimEveDisplay.hh  WCSimEventWriter.cc  WCSimEventWriter.hh  WCSimIntegralLookup.cc  WCSimIntegralLookup.hh  WCSimIntegralLookupMaker.cc  WCSimIntegralLookupMaker.hh  WCSimNtuple.cc  WCSimNtuple.hh  WCSimNtupleFactory.cc  WCSimNtupleFactory.hh  WCSimNtupleWriter.cc  WCSimNtupleWriter.hh  WCSimNvidiaMath.cc  WCSimNvidiaMath.hh  WCSimReco.hh  WCSimRecoAB.cc  WCSimRecoAB.hh  WCSimRecoFactory.cc  WCSimRecoFactory.hh  WCSimRecoNtuple.cc  WCSimRecoNtuple.hh  WCSimRingViewer.cc  WCSimRingViewer.hh  WCSimTimeLikelihood.cc  WCSimTimeLikelihood.hh  WCSimTimeLikelihood2.cc  WCSimTimeLikelihood2.hh  WCSimVertexNtuple.cc  WCSimVertexNtuple.hh  (+4 more)
legacyCode/macros/: wc_calculateSingleLikelihood.C  wc_estimateParticleSpeed.C  wc_eventdisplay.C  wc_houghdisplay.C
macros/: plotAverageEvent.C  predictedVsMean.C  wc_compareFirstHitTimes.C  wc_cosmic_rmt.C  wc_createTimeLikelihoodHistograms.C  wc_eventdisplay.C  wc_eventdisplay_3D.C  wc_eventntuple_nue.C  wc_eventwriter.C  wc_geometry.C  wc_integraltabulator.C  wc_plotFirstTimePDF.C  wc_trackfitter.C  wc_trackfitter_cosmic.C  wc_trackfitter_new.C  wc_trackfitter_new_el.C  wc_trackfitter_new_mu.C  wc_trackfitter_piZero.C  wc_trackfitter_sweep.C  wc_trackfitter_twoTracks.C  wc_trackminimizer.C  wc_vertexdisplay.C
macros/GenerateDigitizerPDFs/: MakeDigitizerPDFs.sh  RunDigitizerPDFMaker.C  RunDigitizerPDFMaker.sh  WCSimDigitizerPDFMaker.cc  WCSimDigitizerPDFMaker.hh  combine.py  normVertical.C
macros/GenerateEmissionProfiles/: README  RunEmissionProfileGenerator.C  WCSimConcatenateEmissionProfiles.cc  WCSimConcatenateEmissionProfiles.hh  WCSimEmissionProfileGenerator.cc  WCSimEmissionProfileSelector.cc  generate_macfile.py  make_profile_files.sh  runConcatenate.C
macros/GenerateScatteringTable/: buildScatteringTable.C  makeNewScatteringFiles.C  makeScatteringJobs.py  runMakeNewScatteringFiles.C
pid/: LoadLibs.C  README  run_wcCombineTrees.C  run_wcCombineTrees.py  run_wcPID.py  run_wcTMVA.py  wc_combineTrees.C  wc_make_all_TMVA.cc  wc_trainTMVA_electronCCQEvsNC.cc  wc_trainTMVA_electronCCQEvsNC.hh  wc_trainTMVA_electronMuonCCQE.cc  wc_trainTMVA_electronMuonCCQE.hh
pid/cosmicPid/: combineMuonFitFiles.C  plots.C
pid/macros/: wc_combineTrees.C  wc_trainTMVA_electronCCQEvsNC.C  wc_trainTMVA_electronMuonCCQE.C
pid/oldPid/: LoadLibs.C  run_wcCombineTrees.C  run_wcTMVA.C  wc_readTMVA.C  (+2 more)
src/: WCSimAnalysisConfig.cc  WCSimAnalysisRootDict.cc  WCSimAnalysisRootDict.h  WCSimChargeLikelihood.cc  WCSimChargePredictor.cc  WCSimCosmicFitter.cc  WCSimCosmicSeed.cc  WCSimDataCleaner.cc  WCSimDetectorParameters.cc  WCSimDigitizerLikelihood.cc  WCSimDigitizerPDFMaker.cc  WCSimDisplayAB.cc  WCSimDisplayViewer.cc  WCSimEmissionProfileManager.cc  WCSimEmissionProfiles.cc  WCSimEveDisplay.cc  WCSimFastMath.cc  WCSimFitterConfig.cc  WCSimFitterInterface.cc  WCSimFitterParameters.cc  WCSimFitterPlots.cc  WCSimFitterTrackParMap.cc  WCSimFitterTree.cc  WCSimGeometry.cc  WCSimHitComparison.cc  WCSimHoughTransform.cc  WCSimHoughTransformArray.cc  WCSimImageMaker.cc  WCSimIntegralLookup.cc  WCSimIntegralLookup3D.cc  WCSimIntegralLookupMaker.cc  WCSimIntegralLookupMaker3D.cc  WCSimIntegralLookupReader.cc  WCSimInterface.cc  WCSimLikelihoodDigit.cc  WCSimLikelihoodDigitArray.cc  WCSimLikelihoodFitter.cc  WCSimLikelihoodPhotonTrack.cc  WCSimLikelihoodTrack.cc  WCSimLikelihoodTrackBase.cc  (+46 more)
src/base/: WCSimMsg.cc  (+65 more)
(+27 files in other folders)
